salesforce_app/force-app/main/default/objects/Intern_Task__c/Intern_Task__c.object-meta.xml
<CustomObject>
    <description>Tasks assigned to interns.</description>
    <label>Intern Task</label>
    <nameField>
        <label>Task Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intern Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>