salesforce_app/force-app/main/default/objects/Intern_Task__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
                <color>#FF0000</color>
                <label>High</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <color>#FFCC00</color>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>Low</fullName>
                <color>#00FF00</color>
                <label>Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>