salesforce_app/force-app/main/default/objects/Intern_Task__c/fields/Today_Work_Progress__c.field-meta.xml
<CustomField>
    <fullName>Today_Work_Progress__c</fullName>
    <label>Today Work Progress</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>